--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -91,6 +91,7 @@ services:
     restart: always
     ports:
       - 25:25
+    tty: true
 
   # * =============================================== backup =============================================== * #
   backup:
