--- a/env/Caddyfile
+++ b/env/Caddyfile
@@ -5,3 +5,7 @@ unami.ziyixi.science {
 changedetection.ziyixi.science {
         reverse_proxy * changedetection:5000
 }
+
+dashboard.ziyixi.science {
+        reverse_proxy * flame:5005
+}
