--- a/aliyun/docker-compose.yml
+++ b/aliyun/docker-compose.yml
@@ -17,6 +17,7 @@ services:
       - ./env/index.html:/var/www/vpn.ziyixi.science/index.html
       - ./data/caddy:/data
       - ./config/caddy:/config
+      - ./secret:/var/lib/caddy/.local/share/caddy/certificates/acme-v02.api.letsencrypt.org-directory/vpn.ziyixi.science
     networks:
       - caddy
 
@@ -33,6 +34,6 @@ services:
       - SERVER_PORT=9999
       - METHOD=aes-256-gcm
     volumes:
-      - ./data/caddy/caddy/certificates/acme-v02.api.letsencrypt.org-directory/vpn.ziyixi.science:/caddy
+      - ./secret:/caddy
     networks:
         - caddy
