--- a/aliyun/docker-compose.yml
+++ b/aliyun/docker-compose.yml
@@ -14,7 +14,6 @@ services:
       - "443:443"
     volumes:
       - ./env/Caddyfile:/etc/caddy/Caddyfile
-      - ./env/index.html:/var/www/vpn.ziyixi.science/index.html
       - ./data/caddy:/data
       - ./config/caddy:/config
     networks:
@@ -27,7 +26,7 @@ services:
     container_name: ss
     environment:
       - PASSWORD=GiveMePassWord
-      - ARGS=--plugin v2ray-plugin --plugin-opts server;mode=quic;host=vpn.ziyixi.science;path=/v2ray;cert=/caddy/vpn.ziyixi.science.crt;key=/caddy/vpn.ziyixi.science.key
+      - ARGS=--plugin v2ray-plugin --plugin-opts server;mode=quic;host=vpn.ziyixi.science;cert=/caddy/vpn.ziyixi.science.crt;key=/caddy/vpn.ziyixi.science.key
       - SERVER_PORT=9999
       - METHOD=aes-256-gcm
     volumes:
