--- a/aliyun/docker-compose.yml
+++ b/aliyun/docker-compose.yml
@@ -14,24 +14,25 @@ services:
       - "443:443"
     volumes:
       - ./env/Caddyfile:/etc/caddy/Caddyfile
+      - ./env/index.html:/web/index.html
       - ./data/caddy:/data
       - ./config/caddy:/config
     networks:
       - caddy
 
   # * =============================================== ss =============================================== * #
-  ss:
-    image: acrisliu/shadowsocks-libev:latest
-    restart: always
-    container_name: ss
-    depends_on:
-      - caddy
-    environment:
-      - PASSWORD=GiveMePassWord
-      - ARGS=--plugin v2ray-plugin --plugin-opts server;mode=quic;host=ss.ziyixi.science;cert=/caddy/ss.ziyixi.science.crt;key=/caddy/ss.ziyixi.science.key
-      - SERVER_PORT=9999
-      - METHOD=aes-256-gcm
-    volumes:
-      - ./data/caddy/caddy/certificates/acme-v02.api.letsencrypt.org-directory/ss.ziyixi.science:/caddy
-    networks:
-        - caddy
+  # ss:
+  #   image: acrisliu/shadowsocks-libev:latest
+  #   restart: always
+  #   container_name: ss
+  #   depends_on:
+  #     - caddy
+  #   environment:
+  #     - PASSWORD=GiveMePassWord
+  #     - ARGS=--plugin v2ray-plugin --plugin-opts server;mode=quic;host=ss.ziyixi.science;cert=/caddy/ss.ziyixi.science.crt;key=/caddy/ss.ziyixi.science.key
+  #     - SERVER_PORT=9999
+  #     - METHOD=aes-256-gcm
+  #   volumes:
+  #     - ./data/caddy/caddy/certificates/acme-v02.api.letsencrypt.org-directory/ss.ziyixi.science:/caddy
+  #   networks:
+  #       - caddy
