--- a/aliyun/docker-compose.yml
+++ b/aliyun/docker-compose.yml
@@ -3,14 +3,12 @@ version: "3.8"
 services:
   # * =============================================== shadowsocks =============================================== * #
   shadowsocks:
-    image: shadowsocks/shadowsocks-libev
+    image: teddysun/shadowsocks-libev:latest
     ports:
       - "8388:8388"
-    environment:
-      - METHOD=aes-256-gcm
-      - PASSWORD=changemelater
-      - TIMEOUT=30000
     restart: always
+    volumes:
+      - ./env/config.json:/etc/shadowsocks-libev/config.json
 
   # * =============================================== frp =============================================== * #
   frp:
