--- a/aliyun/docker-compose.yml
+++ b/aliyun/docker-compose.yml
@@ -15,6 +15,7 @@ services:
     # ref: https://calxu.github.io/note/20200301_vpn_2/
     image: snowdreamtech/frpc:latest
     container_name: frp
+    network_mode: host
     restart: always
     volumes:
       - ./env/frpc.ini:/etc/frp/frpc.ini
