--- a/aliyun/docker-compose.yml
+++ b/aliyun/docker-compose.yml
@@ -1,14 +1,18 @@
 version: "3.8"
 
+networks:
+  comm:
+    driver: bridge
+
 services:
   # * =============================================== shadowsocks =============================================== * #
   shadowsocks:
     image: teddysun/shadowsocks-libev:latest
-    ports:
-      - "8388:8388"
     restart: always
     volumes:
       - ./env/config.json:/etc/shadowsocks-libev/config.json
+    networks:
+      - comm
 
   # * =============================================== frp =============================================== * #
   frp:
@@ -21,3 +25,5 @@ services:
     restart: always
     volumes:
       - ./env/frpc.ini:/etc/frp/frpc.ini
+    networks:
+      - comm
