--- a/aliyun/docker-compose.yml
+++ b/aliyun/docker-compose.yml
@@ -1,29 +1,20 @@
 version: "3.8"
 
-networks:
-  comm:
-    driver: bridge
-
 services:
   # * =============================================== shadowsocks =============================================== * #
   shadowsocks:
     image: teddysun/shadowsocks-libev:latest
+    network_mode: "host"
     restart: always
     volumes:
       - ./env/config.json:/etc/shadowsocks-libev/config.json
-    networks:
-      - comm
 
   # * =============================================== frp =============================================== * #
   frp:
     # ref: https://calxu.github.io/note/20200301_vpn_2/
     image: snowdreamtech/frpc:latest
     container_name: frp
-    ports:
-      - "12345:12345"
-      - "7000:7000"
+    network_mode: "host"
     restart: always
     volumes:
       - ./env/frpc.ini:/etc/frp/frpc.ini
-    networks:
-      - comm
