--- a/aliyun/env/frpc.ini
+++ b/aliyun/env/frpc.ini
@@ -3,7 +3,7 @@ server_addr = 20.102.67.195
 server_port = 7000
 
 [shadowsocks]
-type = tcp
+type = tcp_only
 local_ip = shadowsocks
 local_port = 8388
 remote_port = 12345
