--- a/aliyun/env/frpc.ini
+++ b/aliyun/env/frpc.ini
@@ -2,6 +2,10 @@
 server_addr = 20.102.67.195
 server_port = 7000
 
+log_file = /log/frpc.log
+log_level = debug
+log_max_days = 3
+
 [shadowsocks]
 type = tcp
 local_ip = shadowsocks
