--- a/env/frps.ini
+++ b/env/frps.ini
@@ -1,6 +1,10 @@
 [common]
 bind_port = 7000
 
+log_file = /log/frps.log
+log_level = debug
+log_max_days = 3
+
 [shadowsocks]
 type = tcp
 bind_addr = 0.0.0.0
