--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -110,33 +110,36 @@ services:
     image: mcuadros/ofelia:latest
     container_name: ofelia
     depends_on:
-      - job_finder
+      - jobfinder
     command: daemon --docker
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
+    restart: always
 
-  job_finder:
+  jobfinder:
     image: ghcr.io/ziyixi/job-finder:latest
-    container_name: job_finder
+    container_name: jobfinder
     labels:
       ofelia.enabled: "true"
-      ofelia.job-exec.job_finder.schedule: "@every 1h"
-      ofelia.job-exec.job_finder.no-overlap: 'true'
-      ofelia.job-exec.job_finder.command: "sh run_job.sh > log.txt"
+      ofelia.job-exec.jobfinder.schedule: "@every 1h"
+      ofelia.job-exec.jobfinder.no-overlap: 'true'
+      ofelia.job-exec.jobfinder.command: "sh run_job.sh > log.txt"
     volumes:
       - ./data/job_finder/log.txt:/app/job_finder/log.txt
       - ./data/job_finder/job_finder.sqlite:/app/job_finder/job_finder.sqlite
+    restart: always
 
   sqlite-web:
     image: ghcr.io/ziyixi/sqlite-web:latest
     container_name: sqlite-web
     depends_on:
-      - job_finder
+      - jobfinder
     volumes:
       - ./data/job_finder:/data
     env_file: ./env/sqlite_web.env
     networks:
       - caddy
+    restart: always
 
   # * =============================================== backup =============================================== * #
   backup:
