--- a/.github/workflows/update_docker_compose.yml
+++ b/.github/workflows/update_docker_compose.yml
@@ -24,4 +24,4 @@ jobs:
           --resource-group container-host \
           --name ContainerHostVM \
           --command-id RunShellScript \
-          --scripts "cd /home/xiziyi/self-host-on-azure && git config --global --add safe.directory /home/xiziyi/self-host-on-azure && git pull && chmod +x update.sh && ./update.sh > info"
+          --scripts "cd /home/xiziyi/self-host-on-azure && git config --global user.email 'ziyixi@mail.ustc.edu.cn' && git config --global user.name 'Ziyi Xi' && git config --global --add safe.directory /home/xiziyi/self-host-on-azure && git pull && chmod +x update.sh && ./update.sh > info"
