Use todoist cloudmailin sync now

--- a/env/cloudmailin.env
+++ b/env/cloudmailin.env
@@ -1,4 +1,4 @@
-dida365_username=a
-dida365_password=b
-cloudmailin_username=c
-cloudmailin_password=d
+todoist_api_key=a
+cloudmailin_username=b
+cloudmailin_password=c
+openai_api_key=d
