--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
 
   # * =============================================== unami =============================================== * #
   unami:
-    image: ghcr.io/umami-software/umami:postgresql-latest
+    image: ghcr.io/umami-software/umami:postgresql-v1.40
     environment:
       DATABASE_URL: postgresql://umami:umami@unami-db:5432/umami
       DATABASE_TYPE: postgresql
