--- a/env/Caddyfile
+++ b/env/Caddyfile
@@ -17,3 +17,7 @@ job.ziyixi.science {
 daily.ziyixi.science {
 	reverse_proxy * cloudmailin-todoist-app:8080
 }
+
+wiki.ziyixi.science {
+	reverse_proxy * bookstack:80
+}
