--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ networks:
   caddy:
   unami:
   changedetection:
+  bookstack:
 
 
 volumes: {}
@@ -150,6 +151,46 @@ services:
     env_file: ./env/cloudmailin.env
     networks:
       - caddy
+
+  # * =============================================== bookstack =============================================== * #
+  bookstack:
+    image: lscr.io/linuxserver/bookstack
+    container_name: bookstack
+    volumes:
+      - ./data/bookstack:/config
+    restart: unless-stopped
+    environment:
+      - PUID=1000
+      - PGID=1000
+      - APP_URL=https://wiki.ziyixi.science
+      - DB_HOST=bookstack_db
+      - DB_PORT=3306
+      - DB_USER=bookstack
+      - DB_PASS=bookstack
+      - DB_DATABASE=bookstackapp
+    depends_on:
+      - bookstack_db
+    networks:
+      - bookstack
+      - caddy
+      
+  bookstack_db:
+    image: lscr.io/linuxserver/mariadb
+    container_name: bookstack_db
+    environment:
+      - PUID=1000
+      - PGID=1000
+      - MYSQL_ROOT_PASSWORD=bookstack
+      - TZ=America/Detroit
+      - MYSQL_DATABASE=bookstackapp
+      - MYSQL_USER=bookstack
+      - MYSQL_PASSWORD=bookstack
+    volumes:
+      - ./data/bookstack_db:/config
+    restart: unless-stopped
+    networks:
+      - bookstack
+
 
   # * =============================================== backup =============================================== * #
   backup:
