--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ services:
     environment:
       DATABASE_URL: postgresql://umami:umami@unami-db:5432/umami
       DATABASE_TYPE: postgresql
-      HASH_SALT: randomhashsalt
+      APP_SECRET: randomhashsalt
     depends_on:
       - unami-db
     restart: always
@@ -38,13 +38,12 @@ services:
       - unami
 
   unami-db:
-    image: postgres:12-alpine
+    image: postgres:15-alpine
     environment:
       POSTGRES_DB: umami
       POSTGRES_USER: umami
       POSTGRES_PASSWORD: umami
     volumes:
-      - ./env/unami.schema.postgresql.sql:/docker-entrypoint-initdb.d/schema.postgresql.sql:ro
       - ./data/umami:/var/lib/postgresql/data
     restart: always
     networks:
