update siyuan accessAuthCode config

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -167,7 +167,8 @@ services:
     volumes:
       - ./data/siyuan:/siyuan/workspace
     user: "1000:1000"
-    command: --workspace=/siyuan/workspace/
+    command: ['--workspace=/siyuan/workspace/', '--accessAuthCode=${AuthCode}']
+    env_file: ./env/siyuan.env
     networks:
       - caddy
 
