use main domain for the blog

--- a/env/Caddyfile
+++ b/env/Caddyfile
@@ -26,6 +26,6 @@ siyuan.ziyixi.science {
 	reverse_proxy * siyuan:6806
 }
 
-wordpress.ziyixi.science {
+ziyixi.science {
 	reverse_proxy * wordpress:80
 }
