Use two domains for configuration

--- a/env/Caddyfile
+++ b/env/Caddyfile
@@ -29,3 +29,7 @@ siyuan.ziyixi.science {
 ziyixi.science {
 	reverse_proxy * wordpress:80
 }
+
+wordpress.ziyixi.science {
+	reverse_proxy * wordpress:80
+}
