update backup config

--- a/env/backup.env
+++ b/env/backup.env
@@ -57,7 +57,7 @@ BACKUP_FILENAME="backup-%Y-%m-%dT%H-%M-%S.tar.gz"
 # The name of the remote bucket that should be used for storing backups. If
 # this is not set, no remote backups will be stored.
 
-# AWS_S3_BUCKET_NAME="backup-bucket"
+AWS_S3_BUCKET_NAME="vultr-backup"
 
 # If you want to store the backup in a non-root location on your bucket
 # you can provide a path. The path must not contain a leading slash.
@@ -68,8 +68,8 @@ BACKUP_FILENAME="backup-%Y-%m-%dT%H-%M-%S.tar.gz"
 # name. Although all of these keys are `AWS`-prefixed, the setup can be used
 # with any S3 compatible storage.
 
-# AWS_ACCESS_KEY_ID="<xxx>"
-# AWS_SECRET_ACCESS_KEY="<xxx>"
+AWS_ACCESS_KEY_ID="<xxx>"
+AWS_SECRET_ACCESS_KEY="<xxx>"
 
 # It is possible to provide the keys in files, allowing to hide the sensitive data.
 # These values have a higher priority than the ones above, meaning if both are set
@@ -91,7 +91,7 @@ BACKUP_FILENAME="backup-%Y-%m-%dT%H-%M-%S.tar.gz"
 # `s3.amazonaws.com`). If you need to set a specific (non-https) protocol, you
 # will need to use the option below.
 
-# AWS_ENDPOINT="storage.example.com"
+AWS_ENDPOINT="storage.example.com"
 
 # The protocol to be used when communicating with your storage server.
 # Defaults to "https". You can set this to "http" when communicating with
@@ -180,16 +180,16 @@ BACKUP_FILENAME="backup-%Y-%m-%dT%H-%M-%S.tar.gz"
 # The credential's account name when using Azure Blob Storage. This has to be
 # set when using Azure Blob Storage.
 
-AZURE_STORAGE_ACCOUNT_NAME="ziyiscienceblob"
+# AZURE_STORAGE_ACCOUNT_NAME="ziyiscienceblob"
 
 # The credential's primary account key when using Azure Blob Storage. If this
 # is not given, the command tries to fall back to using a managed identity.
 
-AZURE_STORAGE_PRIMARY_ACCOUNT_KEY="<keep it private on GitHub, set it manually!>"
+# AZURE_STORAGE_PRIMARY_ACCOUNT_KEY="<keep it private on GitHub, set it manually!>"
 
 # The container name when using Azure Blob Storage.
 
-AZURE_STORAGE_CONTAINER_NAME="vm-backup"
+# AZURE_STORAGE_CONTAINER_NAME="vm-backup"
 
 # The service endpoint when using Azure Blob Storage. This is a template that
 # can be passed the account name as shown in the default value below.
