use stirling pdf

--- a/env/Caddyfile
+++ b/env/Caddyfile
@@ -21,3 +21,7 @@ ziyixi.science {
 wordpress.ziyixi.science {
 	reverse_proxy * wordpress:80
 }
+
+pdf.ziyixi.science {
+	reverse_proxy * stirling:8080
+}
