--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ networks:
   unami:
   changedetection:
   wordpress:
+  stirling:
 
 
 volumes: {}
@@ -146,6 +147,20 @@ services:
     networks:
       - wordpress
 
+  # * =============================================== stirling-pdf =============================================== * #
+  stirling:
+    image: frooodle/s-pdf:latest
+    container_name: stirling
+    restart: always
+    volumes:
+      - ./env/stirling:/configs
+      - ./data/stirling_logs:/logs/
+    environment:
+      - DOCKER_ENABLE_SECURITY=false
+      - INSTALL_BOOK_AND_ADVANCED_HTML_OPS=false
+      - LANGS=en_US
+    networks:
+      - stirling
   # * =============================================== backup =============================================== * #
   backup:
     image: offen/docker-volume-backup:latest
