add passport for stirling

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -158,6 +158,8 @@ services:
       - DOCKER_ENABLE_SECURITY=false
       - INSTALL_BOOK_AND_ADVANCED_HTML_OPS=false
       - LANGS=en_US
+      - DOCKER_ENABLE_SECURITY=true
+      - SECURITY_ENABLE_LOGIN=true
     networks:
       - caddy
   # * =============================================== backup =============================================== * #
