--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -71,19 +71,6 @@ services:
     networks:
       - changedetection
 
-  # * =============================================== frp =============================================== * #
-  frp:
-    # ref: https://calxu.github.io/note/20200301_vpn_2/
-    image: snowdreamtech/frps:0.51.0
-    container_name: frp
-    restart: always
-    ports:
-      - "12345:12345"
-      - "7002:7002"
-    volumes:
-      - ./env/frps.ini:/etc/frp/frps.ini
-      - ./data/frps.log:/log/frps.log
-
   # * =============================================== cloudmailin-todoist-app =============================================== * #
   cloudmailin-todoist-app:
     image: ghcr.io/ziyixi/cloudmailin-todoist-sync:latest
@@ -94,42 +81,6 @@ services:
     env_file: ./env/cloudmailin.env
     networks:
       - allexport
-
-  # * =============================================== wordpress =============================================== * #
-  wordpress:
-    build:
-      context: .
-      dockerfile: Dockerfile_wordpress
-    container_name: wordpress
-    ports:
-      - "10004:80"
-    restart: always
-    depends_on:
-      - wordpress-db
-    environment:
-      WORDPRESS_DB_HOST: wordpress-db
-      WORDPRESS_DB_USER: wordpress
-      WORDPRESS_DB_PASSWORD: wordpress
-      WORDPRESS_DB_NAME: wordpress
-    volumes:
-      - ./data/wordpress:/var/www/html
-    networks:
-      - allexport
-      - wordpress
-
-  wordpress-db:
-    image: mysql:8.0
-    container_name: wordpress-db
-    restart: always
-    environment:
-      MYSQL_DATABASE: wordpress
-      MYSQL_USER: wordpress
-      MYSQL_PASSWORD: wordpress
-      MYSQL_RANDOM_ROOT_PASSWORD: "yes"
-    volumes:
-      - ./data/wordpress-db:/var/lib/mysql
-    networks:
-      - wordpress
 
   # * =============================================== stirling-pdf =============================================== * #
   stirling:
@@ -152,7 +103,7 @@ services:
 
   # * =============================================== slash =============================================== * #
   slash:
-    image: yourselfhosted/slash:1.0.0
+    image: yourselfhosted/slash:latest
     container_name: slash
     ports:
       - "10006:5231"
@@ -164,7 +115,7 @@ services:
 
   # * =============================================== backup =============================================== * #
   backup:
-    image: offen/docker-volume-backup:latest
+    image: offen/docker-volume-backup:v2.43.0
     restart: always
     env_file: ./env/backup.env
     volumes:
