Refactor docker-compose.yml and environment files
- Refactor docker-compose.yml to replace the cloudmailin-todoist-app service with todofy-app service.
- Update the image and container name for the todofy-app service.
- Update the env_file path in the todofy-app service.
- Remove the unused cloudmailin.env file.
- Add a new todofy.env file with environment variables for the todofy-app service.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -70,14 +70,14 @@ services:
     networks:
       - changedetection
 
-  # * =============================================== cloudmailin-todoist-app =============================================== * #
-  cloudmailin-todoist-app:
-    image: ghcr.io/ziyixi/cloudmailin-todoist-sync:latest
-    container_name: cloudmailin-todoist-app
+  # * =============================================== todofy =============================================== * #
+  todofy-app:
+    image: ghcr.io/ziyixi/todofy:latest
+    container_name: todofy-app
     ports:
       - "10003:8080"
     restart: always
-    env_file: ./env/cloudmailin.env
+    env_file: ./env/todofy.env
     networks:
       - allexport
 
